[package]
name = "x509-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["use-ring"]
use-ring = ["ring"]
use-rust-crypto = ["rsa", "sha-1", "sha2", "md-5", "ecdsa", "p256"]

[dependencies]
x509-core = { path = "../core" }
x509-macros = { path = "../macros" }
ring = { version = "0.16.20", optional = true }
rsa = { version = "0.5", optional = true }
sha2 = { version = "0.9.8", optional = true }
sha-1 = { version = "0.9.8", optional = true }
md-5 = { version = "0.9.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
ecdsa = { version = "0.13.3", optional = true }
p256 = { version = "0.9.0", features=["ecdsa"], optional = true }

[dev-dependencies]
chrono = "0.4"
base64 = "0.10.1"
